Add all LVs; Add check to make sure only Federations that are viable can be used for travel expense reports; Closes #14

--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepFederationDataEntry.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepFederationDataEntry.razor
@@ -11,7 +11,7 @@
 <div class="mb-3">
     <label class="form-label">Verband (Für welchen Verband bist du gereist)</label>
     <select class="form-select" @bind=SelectedFedeationId>
-        @foreach (var federation in AppData.Federations) {
+        @foreach (var federation in AppData.Federations.Where(f => f.CanBeUsedForReport)) {
             <option value=@federation.Id>@federation.FullName()</option>
         }
     </select>
