Add error overview page to help with problematic entries; Closes #13

--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepBankInformationEntry.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepBankInformationEntry.razor
@@ -26,6 +26,6 @@
         <NavLink href="/Overview" class="btn btn-primary">Übersicht</NavLink>
     </div>
     <div style="flex: 1;" class="d-flex justify-content-end">
-        <NavLink href="/StepSummary" class="btn btn-primary">Weiter</NavLink>
+        <NavLink @onclick=GoNext class="btn btn-primary">Weiter</NavLink>
     </div>
 </div>
