--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepOtherCostsOverview.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepOtherCostsOverview.razor
@@ -32,7 +32,7 @@
 
         <div class="mb-2">
             <FileUploadComponent ImageRef="entry.ImageReceipt"
-                                 Title="Bild des Belegs hinzufügen" />
+                                 Title="Bild/PDF des Belegs hinzufügen" />
         </div>
     </div>
 }
