--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepSummary.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepSummary.razor
@@ -242,7 +242,7 @@
 <hr />
 
 <div class="mb-3">
-    <label class="form-label">Anzahl der zusätzlichen Anlagen (Anlagen durch hoch geladenen Bilder werden separat gezählt)</label>
+    <label class="form-label">Anzahl der zusätzlichen Anlagen (Anlagen durch hinzugefügte Bilder/PDFs werden separat gezählt)</label>
     <input class="form-control" type="number" min="0" @bind=AppData.CurrentReport.AttachmentCount />
 </div>
 
