--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelCostsPublicTransit.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelCostsPublicTransit.razor
@@ -20,7 +20,7 @@
     @foreach (var imgRef in AppData.CurrentReport.ImagePublicTransitReceipt) {
         <div class="col h-100 mb-3">
             <FileUploadComponent ImageRef="imgRef"
-                                 Title="Bild der Belegs hinzufügen"
+                                 Title="Bild/PDF des Belegs hinzufügen"
                                  OnRemoveChoiceClicked=OnRemoveClicked />
         </div>
     }
