--- a/PirateTools.TravelExpense.WebApp/_Imports.razor
+++ b/PirateTools.TravelExpense.WebApp/_Imports.razor
@@ -9,3 +9,5 @@
 @using PirateTools.TravelExpense.WebApp
 @using PirateTools.TravelExpense.WebApp.Layout
 @using PirateTools.TravelExpense.WebApp.Components
+
+@using PirateTools.Web.Common.Bootstrap
