Started work on #20

--- a/PirateTools.TravelExpense.WebApp/_Imports.razor
+++ b/PirateTools.TravelExpense.WebApp/_Imports.razor
@@ -11,3 +11,4 @@
 @using PirateTools.TravelExpense.WebApp.Components
 
 @using PirateTools.Web.Common.Bootstrap
+@using PirateTools.Web.Common.BootstrapTimeline
