--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelTypeSelection.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepTravelTypeSelection.razor
@@ -40,7 +40,7 @@
             <div class="card box-highlight h-100">
                 <div class="card-body">
                     <h5 class="card-title">Öffis</h5>
-                    <p class="card-text">Du hast ein Ticket für Bus, Bahn oder Flugzeug* gekauft.</p>
+                    <p class="card-text">Du hast ein Ticket für Bus, Bahn oder Flugzeug gekauft oder hast einen Beleg für eine Taxifahrt.</p>
                 </div>
             </div>
         </NavLink>
