--- a/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepExpenseBaseDataEntry.razor
+++ b/PirateTools.TravelExpense.WebApp/Pages/Wizard/StepExpenseBaseDataEntry.razor
@@ -18,22 +18,24 @@
     <input class="form-control" @bind=AppData.CurrentReport.Destination />
 </div>
 
-<div class="row">
-    <div class="col-9">
-        <div class="mb-3">
-            <label class="form-label">Beschluss-Nr. (Manche Reisen brauchen zwingend einen Beschluss!)</label>
-            <input class="form-control" @bind=AppData.CurrentReport.ResolutionID
-                   @bind:after=OnResolutionIDChanged @bind:event="oninput" />
+@if (AppData.CurrentReport.Regulation.HasFieldForResolutionID) {
+    <div class="row">
+        <div class="col-9">
+            <div class="mb-3">
+                <label class="form-label">Beschluss-Nr. (Manche Reisen brauchen zwingend einen Beschluss!)</label>
+                <input class="form-control" @bind=AppData.CurrentReport.ResolutionID
+                       @bind:after=OnResolutionIDChanged @bind:event="oninput" />
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="mb-3">
+                <label class="form-label">Datum des Beschluss</label>
+                <input class="form-control" type="date" @bind=AppData.CurrentReport.ResolutionDate
+                       disabled="@(string.IsNullOrEmpty(AppData.CurrentReport.ResolutionID))" />
+            </div>
         </div>
     </div>
-    <div class="col-3">
-        <div class="mb-3">
-            <label class="form-label">Datum des Beschluss</label>
-            <input class="form-control" type="date" @bind=AppData.CurrentReport.ResolutionDate
-                   disabled="@(string.IsNullOrEmpty(AppData.CurrentReport.ResolutionID))" />
-        </div>
-    </div>
-</div>
+}
 
 <h1>Zeiten</h1>
 
