--- a/PirateTools.TravelExpense.WebApp/Layout/MainLayout.razor
+++ b/PirateTools.TravelExpense.WebApp/Layout/MainLayout.razor
@@ -3,3 +3,13 @@
 <div class="container pt-4 pb-4">
     @Body
 </div>
+
+<div class="container">
+    <footer>
+        <hr />
+        <div class="d-flex justify-content-between">
+            <p>Reisekostentool von @@joscha999</p>
+            <p>Source und Issues auf <a href="https://github.com/joscha999/PirateTools">GitHub</a></p>
+        </div>
+    </footer>
+</div>
